Version 0.29.1
   * Fixed bug in polymorphism mode option --polymorphism-reject-surrounding-homopolymer-length.
     and its default setting. This filter had been operating differently, and more stringently than 
     intended, resulting in the rejection of certain polymorphisms when the same base as the variant
     base was present in the reference genome at positions immediately before and after the mutation.
   * HTML and GD output now include a POLYMORPHISM_REJECT field describing why a putative polymorphism
     was reassigned as a consensus mutation with 100% frequency (i.e., rejected as a polymorphism).

Version 0.29.0
   * CRITICAL fixes for polymorphism mode bugs that could lead to missing high frequency
     mutations when compiled on certain platforms and in very high coverage samples.
   * Updated included SAMtools version to 1.3.1; added multithreading to samtools sort steps.
   * Other fixes to enable output from other mapping programs using --aligned-sam mode.
   * Other minor bug fixes and improvements.

Version 0.28.1
   * Fixed R out-of-range integer error encountered when one of the reference 
     sequences had very high read-depth coverage.
   * Extra validation steps for Genome Diff files with complex mutational series
     (using 'within' and 'before' fields) may require updates (corrections) for 
     manually edited Genome Diff files when they are used with certain gdtools commands.

Version 0.28.0
   * Revamped how gene locations are handled internally to deal with complicated
     cases: trans-spliced genes, internal frameshifts, indeterminate start/end 
     coordinated found in incomplete genomes, genes that cross the origin of
     circular chromosomes, etc.
   * Optimizations to improve slow fitting of very high coverage reference sequences,
     and for junction predictions involving these sequences (for example, in samples 
     containing high copy number plasmids).
   * Various fixes for gdtools commands.

Version 0.27.2